--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,22 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="https://unpkg.com/mvp.css"> 
+        <link rel="stylesheet" href="https://unpkg.com/mvp.css" />
     </head>
     <body>
         <h1>Welcome to the Griffon Project</h1>
         <p>This is a simple HTML page to test the backend routes.</p>
+        <form action="/api/register" method="post">
+            <label for="name">Name:</label>
+            <input type="text" id="username" name="username" required />
+            <br />
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required />
+            <br />
+            <label for password>Password:</label>
+            <input type="password" id="password" name="password" required />
+            <br />
+            <button type="submit">Submit</button>
+        </form>
     </body>
 </html>
