Finalisation route add user , deletion user , getAll user

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
         <link rel="stylesheet" href="https://unpkg.com/mvp.css" />
+        <script src="script.js" defer></script>
     </head>
     <body>
         <h1>Welcome to the Griffon Project</h1>
@@ -21,5 +22,6 @@
             <br />
             <button type="submit">Submit</button>
         </form>
+        <div id="users"></div>
     </body>
 </html>
