--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,23 +5,55 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
         <link rel="stylesheet" href="https://unpkg.com/mvp.css" />
+        <link rel="stylesheet" href="style.css" />
         <script src="script.js" defer></script>
     </head>
     <body>
         <h1>Welcome to the Griffon Project</h1>
         <p>This is a simple HTML page to test the backend routes.</p>
-        <form action="/api/register" method="post">
-            <label for="name">Name:</label>
-            <input type="text" id="username" name="username" required />
-            <br />
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required />
-            <br />
-            <label for password>Password:</label>
-            <input type="password" id="password" name="password" required />
-            <br />
-            <button type="submit">Submit</button>
-        </form>
-        <div id="users"></div>
+        <p id="userId"></p>
+        <div class="formContainer">
+            <form action="/api/register" method="post" name="registerForm">
+                <h2>Register</h2>
+                <label for="name">Name:</label>
+                <input type="text" id="username" name="username" required />
+                <br />
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required />
+                <br />
+                <label for password>Password:</label>
+                <input type="password" id="password" name="password" required />
+                <br />
+                <button type="submit">Submit</button>
+            </form>
+
+            <form>
+                <h2>Login</h2>
+                <label for="username">Username:</label>
+                <input
+                    type="text"
+                    id="usernameLogin"
+                    name="username"
+                    required
+                />
+                <br />
+                <label for="password">Password:</label>
+                <input
+                    type="password"
+                    id="passwordLogin"
+                    name="password"
+                    required
+                />
+                <br />
+                <button type="submit" id="loginButton">Login</button>
+            </form>
+
+            <div id="users"></div>
+            <form action="/api/game" method="post">
+                <h2>Create Game</h2>
+                <br />
+                <button type="submit">Create Game</button>
+            </form>
+        </div>
     </body>
 </html>
