--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,18 +13,15 @@
         <p>This is a simple HTML page to test the backend routes.</p>
         <p id="userId"></p>
         <div class="formContainer">
-            <form action="/api/register" method="post" name="registerForm">
+            <form action="" method="post" name="registerForm">
                 <h2>Register</h2>
-                <label for="name">Name:</label>
-                <input type="text" id="username" name="username" required />
-                <br />
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required />
                 <br />
                 <label for password>Password:</label>
                 <input type="password" id="password" name="password" required />
                 <br />
-                <button type="submit">Submit</button>
+                <button type="submit" id="submitButton">Submit</button>
             </form>
 
             <form>
@@ -49,10 +46,10 @@
             </form>
 
             <div id="users"></div>
-            <form action="/api/game" method="post">
+            <form >
                 <h2>Create Game</h2>
                 <br />
-                <button type="submit">Create Game</button>
+                <button type="submit" id="createGame">Create Game</button>
             </form>
         </div>
     </body>
