refactor game and user controllers to use Prisma, add game retrieval and deletion functionality

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,6 +46,7 @@
             </form>
 
             <div id="users"></div>
+            <div id="games"></div>
             <form >
                 <h2>Create Game</h2>
                 <br />
